--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-  "name": "tindahan.hermes.local",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
-  }
+    "name": "tindahan",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "data:import": "node mongo/seeder",
+        "data:destroy": "node mongo/seeder -d"
+    },
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "cookie": "^0.6.0",
+        "jose": "^5.1.3",
+        "mongoose": "^8.0.3",
+        "next": "^14.0.4",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-redux": "^9.0.4",
+        "redux": "^5.0.0",
+        "redux-thunk": "^3.1.0",
+        "tailwindcss": "^3.4.0"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.16",
+        "postcss": "^8.4.32"
+    }
 }
