--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
     "name": "tindahan",
     "version": "0.0.1",
+    "type": "module",
     "private": true,
     "scripts": {
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "data:import": "node mongo/seeder",
-        "data:destroy": "node mongo/seeder -d"
+        "data:import": "node mongoose/seeder",
+        "data:destroy": "node mongoose/seeder -d"
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "cookie": "^0.6.0",
+        "dotenv": "^16.3.1",
         "jose": "^5.1.3",
         "mongoose": "^8.0.3",
         "next": "^14.0.4",
