--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-redux": "^9.0.4",
         "redux": "^5.0.0",
         "redux-thunk": "^3.1.0",
+        "@redux-devtools/extension": "3.3.0",
         "tailwindcss": "^3.4.0"
     },
     "devDependencies": {
